--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "version": "0.0.1",
   "license": "Copyrighted / All Rights Reserved",
   "dependencies": {
-    "express": "~3.4.x",
-    "coffee-script": "^1.7.1"
+    "browserify": "^6.3.2",
+    "coffee-script": "^1.7.1",
+    "express": "~3.4.x"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "engines": {
     "node": "0.10.x"
   },
