--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "browserify": "^6.3.2",
     "coffee-script": "^1.7.1",
-    "express": "~3.4.x"
+    "coffeeify": "^1.0.0",
+    "express": "^3.18.3"
   },
   "devDependencies": {},
   "engines": {
