--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "browserify": "^6.3.2",
     "coffee-script": "^1.7.1",
     "coffeeify": "^1.0.0",
-    "express": "^3.18.3"
+    "express": "^3.18.3",
+    "react": "^0.12.1"
   },
   "devDependencies": {},
   "engines": {
